Use ScopedMachSendRight in media::NumberOfPhysicalProcessors().

This is not leaking, but it is easier to audit for leaks when using
the scoper.

Bug: 879307
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I3d0fa36922feb1a4c1ffef293b97d030c8793e14
Reviewed-on: https://chromium-review.googlesource.com/1196967
Reviewed-by: Olga Sharonova <olka@chromium.org>
Commit-Queue: Olga Sharonova <olka@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588015}